[gd_scene load_steps=6 format=3 uid="uid://dsww2j4bmv25c"]

[ext_resource type="Texture2D" uid="uid://bbid4bbklli47" path="res://ui/main_screen/title.png" id="1"]
[ext_resource type="PackedScene" uid="uid://gncjx82kh0m" path="res://ui/menus/sounds/menu_sound_player.tscn" id="2"]
[ext_resource type="Theme" path="res://ui/theme_main_menu.tres" id="3"]
[ext_resource type="Script" uid="uid://5wddae58oufb" path="res://ui/main_menu.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://bv00wk2go2l6s" path="res://ui/screen_fader.tscn" id="5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="LogoContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="CenterContainer/VBoxContainer/LogoContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 5

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="TextContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StartText" type="Label" parent="CenterContainer/VBoxContainer/TextContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.301961, 0.65098, 1, 1)
theme_override_font_sizes/font_size = 24
text = "按任意按钮开始游戏"
horizontal_alignment = 1

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ScreenFader" parent="FadeLayer" instance=ExtResource("5")]
duration_fade_out = 1.0

[node name="MenuSoundPlayer" parent="." instance=ExtResource("2")]
